# kaggle-eedi

./: .gitignore  Dockerfile  README.md  compose.yml  justfile  mypy.ini  pyproject.toml  ruff.toml
conf/path/: kaggle.yaml  local.yaml
exp/exp001/: config.yaml  data_processor.py  train.py
exp/exp002/: config.yaml  data_processor.py  inference.py
exp/exp003/: config.yaml  inference.py  train.py
exp/exp004/: config.yaml  inference.py  train.py
exp/exp005/: config.yaml  data_processor.py  inference.py
exp/exp006/: config.yaml  data_processor.py
exp/exp007/: config.yaml  data_processor.py  train.py
exp/exp008/: config.yaml  data_processor.py  inference.py  train.py
exp/exp009/: config.yaml  data_processor.py  inference.py  train.py
exp/exp010/: inference.py
exp/exp011/: config.yaml  data_processor.py
exp/exp012/: config.yaml
exp/exp013/: config.yaml
exp/exp014/: config.yaml
exp/exp015/: config.yaml
exp/exp016/: config.yaml  data_processor.py  train.py
exp/exp017/: config.yaml  run.sh  search_llm_model.py  train.py
exp/exp018/: config.yaml  data_processor.py
exp/exp019/: config.yaml
exp/exp020/: config.yaml  data_processor.py  train.py
exp/exp021/: data_processor.py  train.py
exp/exp022/: config.yaml  data_processor.py  train.py
exp/exp023/: config.yaml  data_processor.py  train.py
exp/exp024/: config.yaml  data_processor.py  train.py
exp/exp025/: config.yaml  data_processor.py  evaluate.py  inference.py  train.py
exp/exp026/: config.yaml  evaluate.py  train.py
exp/exp027/: config.yaml  data_processor.py  train.py
notebook/: debug.ipynb
(+326 files in other folders)
