[project]
name = "kaggle-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "accelerate>=0.34.2",
  "bitsandbytes>=0.44.1",
  "catboost>=1.2.7",
  "datasets>=2.19.1",
  "editables>=0.5",
  "hatchling>=1.25",
  "hydra-core>=1.3.2",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "kaggle==1.6.1", # >=1.6.9だとエラーが出る
  "lightgbm>=4.5",
  "lightning>=2.3.3",
  "mypy>=1.11.2",
  "nbformat>=5.10.4",
  "optuna>=4",
  "pandas>=2.2.2",
  "peft>=0.13.2",
  "polars>=1.7.1",
  "pre-commit>=3.8",
  "pyarrow>=17",
  "pydantic>=2.7.4",
  "pytest>=8.3.3",
  "rich>=13.8.1",
  "ruff>=0.6.5",
  "scikit-learn>=1.5.2",
  "seaborn>=0.13.2",
  "sentence-transformers>=3.2",
  "streamlit>=1.38",
  "timm>=1.0.9",
  "torch==2.4.0+cu121",
  "torch-geometric>=2.6",
  "transformers>=4.46",
  "trl>=0.11.4",
  "vllm>=0.6.3",
  "wandb>=0.18.1",
  "wheel>=0.44",
  "xgboost>=2.1.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
index-strategy = "unsafe-best-match"
dev-dependencies = [
    "autoawq>=0.2.5",
    "autoawq-kernels>=0.0.8",
    "flash-attn>=2.6.3",
]

[tool.uv.sources]
autoawq-kernels = { git = "https://github.com/casper-hansen/AutoAWQ_kernels.git" }
